--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,11 +12,7 @@
       <ion-label stacked>Senha</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item> 
-    <button style="margin-top: 30px;" ion-button block>Entrar</button>
+    <button style="margin-top: 30px;" ion-button block (click)="login()">Entrar</button>
   </form>
   <button style="margin-top: 10px;" ion-button block outline>Registrar</button>
-
-
-
-
 </ion-content>
