--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,6 @@
     </ion-item> 
     <button style="margin-top: 30px;" ion-button block (click)="login()">Entrar</button>
   </form>
-  <button style="margin-top: 10px;" ion-button block outline>Registrar</button>
+  <button style="margin-top: 10px;" ion-button block outline (click)="signup()">Registrar</button>
 </ion-content> 
 
