--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content padding>
-    <form [formGroup]="formGroup" (ngSubmit)="signupUser(); $event.preventDefault()">
+    <form [formGroup]="formGroup" (ngSubmit)="signupUser();">
       <ion-item>
         <ion-label stacked>Nome*</ion-label>
         <ion-input formControlName="nome" type="text"></ion-input>
