--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Cart</ion-title>
   </ion-navbar>
 </ion-header>
@@ -13,8 +16,20 @@
       </ion-thumbnail>
       <h2>{{item.produto.nome}}</h2>
       <p>{{item.produto.preco | currency}}</p>
-      <p>{{item.quantidade}}</p>
+      <ion-icon class="nolinebreak" name="remove-circle" color="primary" (click)="decreaseQuantity(item.produto)"></ion-icon>
+      <p class="nolinebreak">{{item.quantidade}}</p>
+      <ion-icon name="add-circle" color="primary" (click)="increaseQuantity(item.produto)"></ion-icon>
+      <ion-icon name="trash" color="danger" (click)="removeItem(item.produto)" item-end></ion-icon>
     </ion-item>
+      <ion-item *ngIf="total() > 0">
+        <h1>Total</h1>
+        <h1 item-end>{{total() |currency: 'BRL'}}</h1>
+      </ion-item>
+      <ion-item *ngIf="total() <=0 ">
+        <h1 style="text-align: center;">Carrinho vazio</h1>
+      </ion-item>
   </ion-list>
+
+  <button ion-button block (click)="goOn()">Continuar comprando</button>
 
 </ion-content>
