salvando pedido no DB

--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -69,6 +69,7 @@
 
 
 
-
+<button ion-button block (click)="checkout()">Confirmar pedido</button>
+<button ion-button block outline (click)="back()">Voltar</button>
 
 </ion-content>
