--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -14,9 +14,6 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-
-
-
   <ion-fab top right edge>
     <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
     </ion-fab>
@@ -29,4 +26,9 @@
       <p>{{item.preco | currency}}</p>
     </button>
   </ion-list>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
