--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -15,7 +9,7 @@
 
 <ion-content padding>
 <ion-avatar>
-  <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'">
+  <img class="circle" [src]="profileImage">
 </ion-avatar>
 <h2 text-center>{{cliente?.nome}}</h2>
 <p text-center>{{cliente?.email}}</p>
